Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanTextObj.quorum
class Main
    action Main
        Text v
        v:SetValue(text)
        Test(v)
    end

    action Test(boolean var)
    end
end
